# red-themed-corpus

./: .env.example  .gitignore  main.py  pyproject.toml
run/: download_model.sh  infer_sft.sh  prepare_data.ps1  prepare_data.sh  train_dpo.ps1  train_dpo.sh  train_sft.ps1  train_sft.sh
src/add_tag/: config.py  llm_client.py  llm_client_test.py  pipeline.py  pipeline_test.py  prompts.py  tagger.py  utils.py
src/configs/: data_prep.toml  dpo.toml  sft.toml  utils_config.py
src/data_process/: json_combine.py  json_verify.py  show_samples.py  show_tag.py  word_to_json.py
src/ft/: __init__.py  infer_sft.py  prepare_sft_data.py  train_dpo_unsloth.py  train_sft_unsloth.py
src/scripts/: __init__.py
