[project]
name = "red-themed-corpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface>=0.0.1",
    "matplotlib>=3.8.0",
    "modelscope>=1.33.0",
    "openai>=2.15.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.2.1",
    "tqdm>=4.66.0",
    "unsloth>=2026.1.2",
]
